# template_factory

./: .gitignore  CMakeLists.txt  README.md
src/: body.h  component.h  componentfactory.cpp  componentfactory.h  factory.h  main.cpp  transform.h
